# eivoice

./: README.md  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/ES8388/: es8388.h
components/BSP/MYI2S/: myi2s.c  myi2s.h
components/BSP/MYIIC/: myiic.h
components/BSP/MYSPI/: my_spi.h
components/BSP/SPILCD/: spilcd.h
components/BSP/SPI_SD/: spi_sd.h
components/BSP/XL9555/: xl9555.h
main/: CMakeLists.txt  main.cpp  recorder.cpp  recorder.h
